/*
 * $Id: ChangeLog,v 1.3136 2004/07/05 20:55:38 peterrees Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-07-06 18:34 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
   * doc/en/zipnew.txt
     ! fixed spelling and incorrect specifications in all zip functions
 
2004-07-06 08:55 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * contrib/winprn/tprint.prg
    - fix HB_FUNC_STATIC( DRAWBITMAP ) so StretchDIBits() uses correct co-ords passed

2004-07-02 20:33 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * include/hbpcode.h
  * source/compiler/hbpcode.c
  * source/compiler/genc.c
  * source/compiler/hbfix.c
  * source/vm/hvm.c
    + Added new HB_P_PUSHWITH

  * include/hbexprb.c
  * source/compiler/exproptb.c
    ! Fixed optimization of HB_SetWith() in HB_EA_PUSH_PCODE to push the preset WITH Object using new HB_P_PUSHWITH

  * source/vm/hvm.c
    - Removed no longer needed HB_FUNC( HB_QWITH )

  * source/vm/classes.c
    ! Fixed Error handling in __CLSINSTSUPER() to pass the Class Name argument

  * tests/with.prg
    + Added sample to demonstrate usage of HB_SetWith() and HB_QWith() (also from macros).

  * source/rtl/hbrandom.c
    + Added missing HB_EXPORT to hb_random_num()

  * utils/xbscript/rp_run.src
    * Corrected rule of AddMethod() translation to save/restore preset SELF Object.

  * utils/xbscript/xbs_harb.ch
  * utils/xbscript/xbscript.prg
    ! Rewrote support for "private" STATIC variables which was badly broken.
    ! Fixed bad typo in PP_LocalParams()
    * Guarded dynamic procedures related code with an #ifdef DYN
    * More __MVPut() and __MVGet() instead of macros guarded with #ifdef __HARBOUR__

  * source/rtl/terror.prg
    * Added commented TraceLog()

2004-07-02 09:15 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.vc
    * additional makefile errors
  * bin/bld.bat